@@ -2,6 +2,7 @@ dclone package versions
 
 Version 0.1-3, May 28, 2009
 
+    * distsample function added.
     * mcmc object got n.clones attribute
       if data contained it.
     * nclones.list: returns values for
